Add searchByDocument
Buscar por Dni, por RUC
