# routes/api.php
@@ -1,8 +1,8 @@
 <?php
 
+use App\Http\Controllers\Api\SearchController;
 use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Auth\AuthController;
-use App\Http\Controllers\GroupMenuController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -21,9 +21,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::post('login', [AuthController::class, 'login']);
-
-Route::resource('user',UserController::class)->only(
+Route::resource('user', UserController::class)->only(
     ['index', 'show', 'store', 'update', 'destroy']
 )->names(
     [
@@ -35,7 +33,12 @@ Route::resource('user',UserController::class)->only(
     ]
 );
 
+Route::post('login', [AuthController::class, 'login']);
 Route::group(["middleware" => ["auth:sanctum"]], function () {
     Route::get('logout', [AuthController::class, 'logout']);
     Route::get('authenticate', [AuthController::class, 'authenticate']);
+
+    // SEARCH
+    Route::get('searchByDni/{dni}', [SearchController::class, 'searchByDni']);
+    Route::get('searchByRuc/{ruc}', [SearchController::class, 'searchByRuc']);
 });
